# MultitechConduitModule

./: README.md
IoTHub/src/: iothub.c
MultitechConduit/: CMakeLists.txt
MultitechConduit/devdoc/: multitech_conduit_requirements.md
MultitechConduit/inc/: base64Decode.h  multitechconduit.h  multitechconduit_protocol.h
MultitechConduit/src/: base64Decode.c  multitechconduit.c  multitechconduit_mqtt.c  serialoutput.c
simulated_device_cloud_upload/src/: main.c  module_service_config_disabled.c  module_service_config_enabled.c
